--- a/src/editors/ParticleEditor/ParticleEditor.vcxproj
+++ b/src/editors/ParticleEditor/ParticleEditor.vcxproj
@@ -230,7 +230,14 @@
     <ClCompile Include="PSLibraryEditor.cpp" />
     <ClCompile Include="Splash.cpp" />
     <ClCompile Include="StatGraph.cpp" />
-    <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="stdafx.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Mixed|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Mixed|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="TopBar.cpp" />
     <ClCompile Include="UI_ParticleMain.cpp" />
     <ClCompile Include="UI_ParticleTools.cpp" />
