--- a/src/editors/ShaderEditor/ShaderEditor.vcxproj
+++ b/src/editors/ShaderEditor/ShaderEditor.vcxproj
@@ -45,7 +45,14 @@
     <ClCompile Include="SHSoundEnvTools.cpp" />
     <ClCompile Include="SHToolsInterface.cpp" />
     <ClCompile Include="Splash.cpp" />
-    <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="stdafx.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Mixed|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Mixed|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="TopBar.cpp" />
     <ClCompile Include="ui_shadermain.cpp" />
     <ClCompile Include="UI_shadertools.cpp" />
