Add glslang submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "Externals/tbb"]
 	path = Externals/tbb
 	url = https://github.com/01org/tbb.git
+[submodule "Externals/glslang"]
+	path = Externals/glslang
+	url = https://github.com/KhronosGroup/glslang.git
